--- a/DAL/Properties/Resources.resx
+++ b/DAL/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="datasetqframe" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\datasetqframe.csv;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="datasetqframeVersie2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\datasetqframeVersie2.csv;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
