--- a/UI-MVC/Properties/Resources.resx
+++ b/UI-MVC/Properties/Resources.resx
@@ -127,4 +127,7 @@
   <data name="datasetqframeVersie2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\datasetqframeVersie2.csv;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="template" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\template.csv;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
